<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        />

    <EditText
        android:id="@+id/registerPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/registerConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/confirmPass"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/createUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/create"
        android:onClick="onClickRegister"
        />

</LinearLayout>